--- a/src/MarvelFlow/MarvelFlow.App/App.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfApplication1.App"
+﻿<Application x:Class="MarvelFlow.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApplication1"
+             xmlns:local="clr-namespace:MarvelFlow.App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
