--- a/src/MarvelFlow/MarvelFlow.App/MainWindow.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApplication1.MainWindow"
+﻿<Window x:Class="MarvelFlow.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -32,13 +32,13 @@
 
         </TextBlock>
         <!--Logo Menu -->
-        <Image Source="U:\test\WpfApplication1\Images\marvelLogo.png" Grid.Column="1"  Margin="10,5" />
+        <Image Source="..\Images\marvelLogo.png" Grid.Column="1"  Margin="10,5" />
 
         <!--Menu utilisateur-->
         <TextBlock Foreground="Orange" Grid.Column="2"></TextBlock>
-        
-        <Image Source="U:\test\WpfApplication1\Images\pdp2.png" Grid.Column="2" Margin="128,5,6,5" />
-        
+
+        <Image Source="..\Images\pdp2.png" Grid.Column="2" Margin="128,5,6,5" />
+
         <!--Bar de navigation-->
         <Button Grid.Column="0" Grid.Row="1">Personnages</Button>
         <Button Grid.Column="1" Grid.Row="1">Films</Button>
