--- a/src/MarvelFlow/MarvelFlow.App/Movie.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Movie.xaml
@@ -1,17 +1,12 @@
-﻿<Window x:Class="MarvelFlow.App.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MarvelFlow"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-
-    <Window.Resources>
-        <Style x:Name="buttonStyle" TargetType="Button">
-            <Setter Property="Margin" Value="10,0,10,0"></Setter>
-        </Style>
-    </Window.Resources>
+﻿<Page x:Class="MarvelFlow.App.Movie"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:MarvelFlow.App"
+      mc:Ignorable="d" 
+      d:DesignHeight="350" d:DesignWidth="525"
+      Title="Movie">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -21,12 +16,12 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="30"/>
             <RowDefinition Height="*" />
-            <RowDefinition Height="20" />
         </Grid.RowDefinitions>
+
         <!--Background-->
         <Rectangle Fill="#2c2f33" Grid.ColumnSpan="3" Grid.RowSpan="4"></Rectangle>
+
         <!--Logo Menu -->
         <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/marvelLogo.png" Grid.Column="1"  Margin="10,5" />
 
@@ -46,16 +41,5 @@
             <TextBlock Foreground="White" TextWrapping="Wrap" Text="User" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1"></TextBlock>
             <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/pdp2.png" Grid.Column="2" Grid.Row="1"/>
         </Grid>
-        
-        <!--Bar de navigation-->
-        <Button Grid.Column="0" Grid.Row="1">Personnages</Button>
-        <Button Grid.Column="1" Grid.Row="1">Films</Button>
-        <Button Grid.Column="2" Grid.Row="1">Communauté</Button>
-        <!--Footer-->
-        <TextBlock Background="Gray" Foreground="Orange" Grid.ColumnSpan="3" Grid.Row="3" >
-                        footer
-        </TextBlock>
-
-
     </Grid>
-</Window>
+</Page>
