--- a/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
@@ -33,7 +33,21 @@
                 <ColumnDefinition Width="5*" />
                 <ColumnDefinition Width="50" />
             </Grid.ColumnDefinitions>
-
+            <ListView x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="0" Height="152">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid Columns="5" HorizontalAlignment="Stretch"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                            <Image Source="{Binding image}" HorizontalAlignment="Stretch" VerticalAlignment="Top" Stretch="UniformToFill"/>
+                            <TextBlock Text="{Binding image}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
             <ScrollBar Grid.Column="1" Margin="16.5,10"/>
         </Grid>
     </Grid>
