--- a/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
@@ -21,7 +21,11 @@
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <Button Content="Retour"  Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Black" Foreground="White" BorderBrush="White" FontWeight="Bold" BorderThickness="2" />
+            <Button Content="Retour"  Grid.Column="0" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" 
+                    Background="Black" Foreground="White" 
+                    BorderBrush="White" FontWeight="Bold" BorderThickness="2" 
+                    Command="{Binding ReturnBackCommand}" />
             <Button Content="search" Grid.Column="2" Background="Black" Foreground="White" BorderBrush="White" FontWeight="Bold" BorderThickness="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,8,0"/>
             <TextBox Grid.Column="2" TextWrapping="Wrap" Text="..." VerticalAlignment="Center" Margin="0,7.684,57,7.683" BorderBrush="White" Background="Black" Foreground="White" BorderThickness="2" />
 
