--- a/src/MarvelFlow/MarvelFlow.App/Views/UcMovie.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcMovie.xaml
@@ -20,7 +20,11 @@
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
 
-            <Button Content="Retour"  Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Black" Foreground="White" BorderBrush="White" FontWeight="Bold" BorderThickness="2" />
+            <Button Content="Retour"  Grid.Column="0" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" 
+                    Background="Black" Foreground="White" 
+                    BorderBrush="White" FontWeight="Bold" BorderThickness="2" 
+                    Command='{Binding ReturnBackCommand}'/>
             <TextBlock Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Run Text="TITRE DU FILM"/>
             </TextBlock>
