--- a/src/MarvelFlow/MarvelFlow.App/Views/WindowUser.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/WindowUser.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="MarvelFlow.App.WindowUser"
+﻿<Window x:Class="MarvelFlow.App.Views.WindowUser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MarvelFlow.App"
+        xmlns:local="clr-namespace:MarvelFlow.App.Views"
+        DataContext="{Binding Movie, Source={StaticResource Locator}}"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="WindowUser" Height="250" Width="400">
