--- a/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="300" d:DesignWidth="525">
     <Grid x:Name="___Grid__Générale">
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.75*" />
+            <RowDefinition Height="1*" />
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
         
@@ -24,8 +24,13 @@
                     HorizontalAlignment="Center" VerticalAlignment="Center"
                     Background="Black" Foreground="White"
                     BorderBrush="White" FontWeight="Bold" BorderThickness="2"
+                    Padding="0"
+                    Width="80" Height="40"
                     Command='{Binding ReturnBackCommand}'/>
-            <TextBlock Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="NOM HERO"/>
+            <TextBlock 
+                Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1"
+                HorizontalAlignment="Center" VerticalAlignment="Center" 
+                Text="{Binding name}"/>
         </Grid>
 
         <!--Ligne 2-->
@@ -39,11 +44,28 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <Image  Source="pack://application:,,,/MarvelFlow.App;component/Images/affiche.jpg" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
-            <ScrollBar Grid.Column="2"  Grid.RowSpan="2" HorizontalAlignment="Right" MinWidth="0" Margin="0,10,10,10" Width="13"  />
+            <Image  Source="{Binding image}" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
             <Button Content="FAV"  Grid.Row="1" Grid.Column="0" Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" Foreground="White" FontWeight="Bold" Background="#FFEEA200" />
             <Rectangle Grid.Column="0"  Stroke="White" StrokeThickness="1"/>
-            <TextBox Grid.Column="2" Grid.RowSpan="2" Margin="11,0,33,0" Background="{x:Null}" Foreground="White" Text="Voici le texte descriptif du héro" BorderBrush="{x:Null}"/>
+            <TextBox Grid.Column="2" Grid.RowSpan="1" Margin="11,0,33,0" Background="{x:Null}" Foreground="White" BorderBrush="{x:Null}"
+                     Text="{Binding desc}"/>
+                    
+
+            <ListView ItemsSource="{Binding listMovies}" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" Background="{x:Null}" BorderThickness="0" >
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid Columns="5" HorizontalAlignment="Stretch"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                            <Image Source="{Binding image}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="90" MaxWidth="80" />
+                            <TextBlock Text="{Binding name}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" FontWeight="Bold" TextAlignment="Center" Foreground="White" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
 
         </Grid>
     </Grid>
