--- a/src/MarvelFlow/MarvelFlow.App/Views/UcMovie.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcMovie.xaml
@@ -42,7 +42,7 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <Image  Source="pack://application:,,,/MarvelFlow.App;component/Images/affiche.jpg" Grid.ColumnSpan="2" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
+            <Image  Source="{Binding image}" Grid.ColumnSpan="2" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
             <ScrollBar Grid.Column="2"  Grid.RowSpan="2" HorizontalAlignment="Right" MinWidth="0" Margin="0,10,10,10" Width="13"  />
             <Button Content="B.A"  Grid.Row="1" Grid.Column="0" Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" Foreground="White" FontWeight="Bold" Background="#FFF11E22"/>
             <Button Content="FAV"  Grid.Row="1" Grid.Column="1" Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" Foreground="White" FontWeight="Bold" Background="#FFEEA200" />
