--- a/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
@@ -12,12 +12,12 @@
             <RowDefinition Height="1*" />
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
-        
+
         <!--Ligne 1-->
         <Grid x:Name="___Grid___NOM_HERO" Grid.Row="0" >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="5*" />
             </Grid.ColumnDefinitions>
 
             <Button Content="Retour" Grid.Column="0" 
@@ -30,7 +30,7 @@
             <TextBlock 
                 Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1"
                 HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Text="{Binding name}"/>
+                Text="{Binding Im.name}"/>
         </Grid>
 
         <!--Ligne 2-->
@@ -44,24 +44,23 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <Image  Source="{Binding image}" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
+            <Image  Source="{Binding Im.image}" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
             <Button Content="FAV"  Grid.Row="1" Grid.Column="0" Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" Foreground="White" FontWeight="Bold" Background="#FFEEA200" />
             <Rectangle Grid.Column="0"  Stroke="White" StrokeThickness="1"/>
-            <TextBox Grid.Column="2" Grid.RowSpan="1" Margin="11,0,33,0" Background="{x:Null}" Foreground="White" BorderBrush="{x:Null}"
-                     Text="{Binding desc}"/>
-                    
+            <TextBlock Grid.Column="1" Grid.RowSpan="1"  Background="{x:Null}" Foreground="White" Text="{Binding Im.desc}" Margin="10.4,5,-0.2,0.4"/>
 
-            <ListView ItemsSource="{Binding listMovies}" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" Background="{x:Null}" BorderThickness="0" >
+
+            <ListView ItemsSource="{Binding Im.listMovies }" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" Background="{x:Null}" BorderThickness="0" >
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <UniformGrid Columns="5" HorizontalAlignment="Stretch"/>
+                        <UniformGrid Columns="2" HorizontalAlignment="Stretch"/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                            <Image Source="{Binding image}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="90" MaxWidth="80" />
-                            <TextBlock Text="{Binding name}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" FontWeight="Bold" TextAlignment="Center" Foreground="White" />
+                            <Image Source="{Binding Affiche}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="60" MaxWidth="60" />
+                            <TextBlock Text="{Binding Title}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" FontWeight="Bold" TextAlignment="Center" Foreground="White" />
                         </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
