--- a/src/MarvelFlow/MarvelFlow.App/MainWindow.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/MainWindow.xaml
@@ -9,7 +9,9 @@
         mc:Ignorable="d"
         Background="#1e272e"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="700" Width="1200" 
+        ResizeMode="CanMinimize">
+        
     
     <!--Defnition style general-->
     <Window.Resources>
