--- a/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:MarvelFlow.App.Views"
              DataContext="{Binding Hero, Source={StaticResource Locator}}"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="525">
+             d:DesignHeight="700" d:DesignWidth="1200">
     <Grid x:Name="___Grid__Générale">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
@@ -20,15 +20,17 @@
                 <ColumnDefinition Width="5*" />
             </Grid.ColumnDefinitions>
 
-            <Button Content="Retour" Grid.Column="0" 
-                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                    Background="Black" Foreground="White"
-                    BorderBrush="White" FontWeight="Bold" BorderThickness="2"
-                    Padding="0"
-                    Width="80" Height="40"
-                    Command='{Binding ReturnBackCommand}'/>
+            <Button Grid.Column="0"
+                Background="{x:Null}" BorderThickness="0"
+                VerticalAlignment="Center" HorizontalAlignment="Center"
+                Command='{Binding ReturnBackCommand}' >
+                <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png"
+                   Stretch="Uniform">
+                </Image>
+            </Button>
+            
             <TextBlock 
-                Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1"
+                Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1" FontSize="40"
                 HorizontalAlignment="Center" VerticalAlignment="Center" 
                 Text="{Binding Im.name}"/>
         </Grid>
@@ -51,17 +53,19 @@
 
 
             <ListView ItemsSource="{Binding Im.listMovies }" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" Background="{x:Null}" BorderThickness="0" >
-                <ItemsControl.ItemsPanel>
+                <ItemsControl.ItemsPanel >
                     <ItemsPanelTemplate>
-                        <UniformGrid Columns="2" HorizontalAlignment="Stretch"/>
+                        <UniformGrid  Columns="4" HorizontalAlignment="Stretch"  />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                            <Image Source="{Binding Affiche}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="60" MaxWidth="60" />
-                            <TextBlock Text="{Binding Title}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" FontWeight="Bold" TextAlignment="Center" Foreground="White" />
-                        </StackPanel>
+                        <Button Background="{x:Null}" BorderThickness="0">
+                            <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                                <Image Source="{Binding Affiche}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="60" MaxWidth="60" />
+                                <TextBlock Text="{Binding Title}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" FontWeight="Bold" TextAlignment="Center" Foreground="White" />
+                            </StackPanel>
+                        </Button>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
