--- a/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
@@ -6,46 +6,58 @@
              xmlns:local="clr-namespace:MarvelFlow.App.Views"
              DataContext="{Binding ListHero, Source={StaticResource Locator}}"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="525">
+             d:DesignHeight="700" d:DesignWidth="1200">
     <Grid x:Name="___Grid__Générale">
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.75*" />
+            <RowDefinition Height="1*" />
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
-        
+
         <!--Ligne 1-->
         <Grid x:Name="___Grid__3_Boutons_Home" Grid.Row="0" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <Button Content="Retour"  Grid.Column="0" 
-                    HorizontalAlignment="Center" VerticalAlignment="Center" 
-                    Background="Black" Foreground="White" 
-                    BorderBrush="White" FontWeight="Bold" BorderThickness="2" 
-                    Command="{Binding ReturnBackCommand}" />
-            <Button Content="search" Grid.Column="2" Background="Black" Foreground="White" BorderBrush="White" FontWeight="Bold" BorderThickness="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,8,0"/>
-            <TextBox Grid.Column="2" TextWrapping="Wrap" Text="..." VerticalAlignment="Center" Margin="0,7.684,57,7.683" BorderBrush="White" Background="Black" Foreground="White" BorderThickness="2" />
+            <Button Grid.Column="0" Grid.Row="0"
+                Background="{x:Null}" BorderThickness="0"
+                VerticalAlignment="Center" HorizontalAlignment="Center" Margin="26,20"
+                Command='{Binding ReturnBackCommand}' >
+                <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png"
+                   Stretch="Uniform">
+                </Image>
+            </Button>
 
-            <ComboBox Grid.Column="1" VerticalAlignment="Center" Margin="9,5.684,9,5.683" BorderBrush="Red" Foreground="White" Background="White"   />
+            <UniformGrid Grid.Column="1"  HorizontalAlignment="Stretch" Rows="1" Columns="2" >
+                <ComboBox  Foreground="Black" Background="White" Margin="26,30" />
+                <ComboBox  Foreground="Black" Background="White"  Margin="26,30" />
+            </UniformGrid>
+            
+            <TextBox Grid.Column="2" Text="..." 
+                       BorderBrush="White" Background="Black" 
+                     Foreground="White" BorderThickness="2" Margin="20,30"  />
         </Grid>
 
         <!--Ligne 2-->
         <Grid x:Name="___Grid__Zone_de_recherche" Grid.Row="1">
-            <ListView ItemsSource="{Binding ListHeros}" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="0" Background="{x:Null}" BorderThickness="0" >
+            <ListView ItemsSource="{Binding ListHeros}" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
+                      Grid.Row="0"
+                      Grid.ColumnSpan="3" Background="{x:Null}" BorderThickness="0" >
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <UniformGrid Columns="5" HorizontalAlignment="Stretch"/>
+                        <UniformGrid Columns="5" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
+                        <Button Background="{x:Null}" BorderThickness="0">
                         <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                             <Image Source="{Binding image}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="90" MaxWidth="80" />
-                            <TextBlock Text="{Binding name}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" FontWeight="Bold" TextAlignment="Center" Foreground="White" />
+                            <TextBlock Text="{Binding name}" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontWeight="Bold" TextAlignment="Center" Foreground="White" />
                         </StackPanel>
+                        </Button>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
