--- a/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
@@ -32,7 +32,7 @@
             <TextBlock 
                 Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1" FontSize="40"
                 HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Text="{Binding Im.name}"/>
+                Text="{Binding Hero.Name}"/>
         </Grid>
 
         <!--Ligne 2-->
@@ -46,13 +46,13 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <Image  Source="{Binding Im.image}" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
+            <Image  Source="{Binding Hero.Image}" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
             <Button Content="FAV"  Grid.Row="1" Grid.Column="0" Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" Foreground="White" FontWeight="Bold" Background="#FFEEA200" />
             <Rectangle Grid.Column="0"  Stroke="White" StrokeThickness="1"/>
-            <TextBlock Grid.Column="1" Grid.RowSpan="1"  Background="{x:Null}" Foreground="White" Text="{Binding Im.desc}" Margin="10.4,5,-0.2,0.4"/>
+            <TextBlock Grid.Column="1" Grid.RowSpan="1"  Background="{x:Null}" Foreground="White" Text="{Binding Hero.Desc}" Margin="10.4,5,-0.2,0.4"/>
 
 
-            <ListView ItemsSource="{Binding Im.listMovies }" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" Background="{x:Null}" BorderThickness="0" >
+            <ListView ItemsSource="{Binding Hero.ListMovies }" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" Background="{x:Null}" BorderThickness="0" >
                 <ItemsControl.ItemsPanel >
                     <ItemsPanelTemplate>
                         <UniformGrid  Columns="4" HorizontalAlignment="Stretch"  />
