--- a/src/MarvelFlow/MarvelFlow.App/Views/UcMovie.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcMovie.xaml
@@ -12,12 +12,12 @@
             <RowDefinition Height="1*" />
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
-        
+
         <!--Ligne 1-->
-        <Grid x:Name="___Grid___TITRE_FILM" Grid.Row="0" >
+        <Grid x:Name="___Grid___NOM_HERO" Grid.Row="0" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="3*" />
             </Grid.ColumnDefinitions>
 
             <Button Grid.Column="0" Grid.Row="0"
@@ -28,17 +28,17 @@
                    Stretch="Uniform">
                 </Image>
             </Button>
-            
-            <TextBlock Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Run Text="TITRE DU FILM" FontSize="48"/>
-            </TextBlock>
+
+            <TextBlock 
+                Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1" FontSize="40"
+                HorizontalAlignment="Center" VerticalAlignment="Center" 
+                Text="{Binding Movie.Title}"/>
         </Grid>
-        
+
         <!--Ligne 2-->
-        <Grid x:Name="___Grid__Zone_de_description" Grid.Row="1">
+        <Grid x:Name="___Grid__Zone_descriptif" Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="5*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -46,12 +46,56 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <Image  Source="{Binding image}" Grid.ColumnSpan="2" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
-            <ScrollBar Grid.Column="2"  Grid.RowSpan="2" HorizontalAlignment="Right" MinWidth="0" Margin="0,10,10,10" Width="13"  />
-            <Button Content="B.A"  Grid.Row="1" Grid.Column="0" Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" Foreground="White" FontWeight="Bold" Background="#FFF11E22"/>
-            <Button Content="FAV"  Grid.Row="1" Grid.Column="1" Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" Foreground="White" FontWeight="Bold" Background="#FFEEA200" />
-            <Rectangle Grid.Column="0" Grid.ColumnSpan="2" Stroke="White" StrokeThickness="1"/>
-            <TextBox Grid.Column="2" Grid.RowSpan="2" Margin="11,0,33,0" Background="{x:Null}" Foreground="White" Text="Voici le texte descriptif du film" BorderBrush="{x:Null}"/>
+            <Image  Source="{Binding Movie.Affiche}" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
+            <Button Content="FAV"  Grid.Row="1" Grid.Column="0" Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" Foreground="White" FontWeight="Bold" Background="#FFEEA200" />
+            <Rectangle Grid.Column="0"  Stroke="White" StrokeThickness="1"/>
+
+            <!-- BLOC DESCRIPTION -->
+            <Grid Grid.Row="0" Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.Column="0"  Grid.RowSpan="3" Background="{x:Null}" Foreground="White" Text="{Binding Movie.Desc}" Margin="10.4,5,-0.2,0.4"/>
+                <!-- UNIVERSE / STATUS / TEAM -->
+                <Border Grid.Column="1" BorderThickness="3" BorderBrush="White">
+                    <UniformGrid  Columns="1"  Rows="6" Margin="15">
+
+                        <TextBlock Text="Réalisateur :" Foreground="#C95CE7" FontStyle="Italic" FontSize="20"/>
+                        <TextBlock Text="{Binding Movie.Real}" Foreground="White" 
+                               FontStyle="Italic" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                        <TextBlock Text="Date de Sortie :" Foreground="#7DDA77" 
+                               FontStyle="Italic" FontSize="20"/>
+                        <TextBlock Text="{Binding Movie.Date}" Foreground="White" 
+                               FontStyle="Italic" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                        <TextBlock Text="Disponible :" Foreground="#FFFFDC00" 
+                               FontStyle="Italic" FontSize="20"/>
+                        <TextBlock Text="{Binding Movie.IsOut}" Foreground="White" 
+                               FontStyle="Italic" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+
+
+                    </UniformGrid>
+                </Border>
+            </Grid>
+
+            <ListView ItemsSource="{Binding Movie.ListHeros }" x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" Background="{x:Null}" BorderThickness="0" >
+                <ItemsControl.ItemsPanel >
+                    <ItemsPanelTemplate>
+                        <UniformGrid  Columns="4" HorizontalAlignment="Stretch"  />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Button Background="{x:Null}" BorderThickness="0">
+                            <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                                <Image Source="{Binding Affiche}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="60" MaxWidth="60" />
+                                <TextBlock Text="{Binding Title}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" FontWeight="Bold" TextAlignment="Center" Foreground="White" />
+                            </StackPanel>
+                        </Button>
+                    </DataTemplate> 
+                </ListView.ItemTemplate>
+            </ListView>
 
         </Grid>
     </Grid>
